--- a/A8_todo_list/style.css
+++ b/A8_todo_list/style.css
@@ -9,68 +9,75 @@
 }
 
 button{
-    /* font-size: 32px;
-    padding: 10px;
-    height: 50px;
-    width: 50px; */
+    border: none;
+    padding: 10px 16px;
+    border-radius: 5px;
+    font-size: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
-    /* border: 3px solid rgb(95, 95, 95);
-    border-radius: 8px;
-    background-color: gold; */
+    transition: all 250ms ease;
+}
+
+button:active{
+    transform: scale(0.95) translateY(5px);
 }
 
 .main{
     width: 400px;
-    padding: 20px;
-    border: 2px solid black;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
     margin: 100px;
     /* text-align: center; */
     border-radius: 16px;
     background-color: gold;
 }
 
-#task-list,#controls{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 0.8rem;
+li{
+    font-size: 1.1rem;
 }
 
-#controls button{
-    padding: 5px 12px;
+button.delete{
+    padding: 8px 16px;
     border-radius: 5px;
     border: none;
     background-color: rgb(33, 33, 33);
     color: aliceblue;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
-#task-list{
-    justify-self: center;
+#list{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-left: 1.4rem;
 }
 
-.list{
-    display: grid;
-    grid-template-columns: 1fr 100px;
+.list-item{
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    padding: 20px;
+    align-items: center;
+    gap: 0.6rem;
 }
 
 input{
+    height: 3rem;
     border: none;
     padding: 12px 10px;
     width: 80%;
     border-radius: 8px;
     font-size: 20px;
-    margin: 20px;
+
 }
 
-.add-div{
+.add-div form{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -84,4 +91,8 @@ input{
     font-size: 1.5rem;
     background-color: rgb(33,33,33);
     color: aliceblue;
+}
+
+.clear {
+    align-self: flex-end;
 }
